gitea/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - gitea.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
          kind: Service
