gitea/templates/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha1
kind: TCPRoute
metadata:
  name: gitea-ssh
  labels:
    app.kubernetes.io/name: gitea
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: tcp-ssh
  rules:
      backendRefs:
        - name: gitea-ssh
          port: 22
          kind: Service
